--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="_sum">+</string>
     <string name="_res">=</string>
     <string name="result_text">Результат</string>
+    <string name="c">C</string>
 </resources>
